--- a/style.css
+++ b/style.css
@@ -38,6 +38,14 @@ body, html {
     font-family: 'Poppins', sans-serif; /* Use your preferred font */
 }
 
+#centered-textimage {
+    position: absolute;
+    top: 50%; /* Adjust the top value to place it below the h6 text */
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
 #centered-text h4 {
     font-size: 35px; /* Adjust font size as needed */
     font-weight: 500; /* Adjust font weight as needed */
