--- a/style.css
+++ b/style.css
@@ -25,34 +25,54 @@ body, html {
     position: absolute;
     top: 0;
     right: 0;
-    margin: 2%; /* Adjust margin as needed */
+    margin: 2%;
 }
 
 #centered-text {
     position: absolute;
-    top: 15%; /* Adjust the top value to center it at the top */
+    top: 15%;
     left: 50%;
     transform: translateX(-50%);
     text-align: center;
-    color: white; /* Set text color as needed */
-    font-family: 'Poppins', sans-serif; /* Use your preferred font */
+    color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
 #centered-textimage {
     position: absolute;
-    top: 50%; /* Adjust the top value to place it below the h6 text */
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-
 #centered-text h4 {
-    font-size: 35px; /* Adjust font size as needed */
-    font-weight: 500; /* Adjust font weight as needed */
+    font-size: 35px;
+    font-weight: 500;
 }
 
 #centered-text h6 {
-    font-size: 50px; /* Adjust font size as needed */
-    font-weight: bold; /* Make it bold */
-    
+    font-size: 50px;
+    font-weight: bold;
+}
+
+#name-input,
+#passcode-input {
+    padding: 10px;
+    margin: 10px;
+    width: 200px;
+    text-align: center;
+}
+
+#login-button {
+    position: absolute;
+    top: 60%; /* Adjust the top value to position the button below centered-textimage */
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 10px;
+    background-color: rgb(0, 132, 255);
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 10%;
+    font-size: 20px;
 }
