done first html page

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Common styles for all screen sizes */
 * {
     margin: 0;
     padding: 0;
@@ -26,7 +27,7 @@ body, html {
     top: 0;
     right: 0;
     margin: 2%;
-    max-width: 100%; /* Make the logo responsive */
+    max-width: 100%;
 }
 
 #centered-text {
@@ -44,7 +45,12 @@ body, html {
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 100%; /* Make the centered image responsive */
+    max-width: 100%;
+}
+
+#centered-textimage img {
+    width: 450px;
+    height: auto;
 }
 
 #centered-text h4 {
@@ -66,10 +72,11 @@ body, html {
     transform: translate(-50%, -50%);
     margin-top: 7%;
     padding: 10px;
-    width: 80%; /* Adjust the input fields width for better responsiveness */
+    width: 80%;
     max-width: 250px;
     text-align: center;
     z-index: 1;
+    border: 1px;
 }
 
 #passcode-input {
@@ -85,7 +92,7 @@ body, html {
     margin-top: 6%;
     transform: translateX(-50%);
     padding: 10px;
-    width: 80%; /* Adjust the button width for better responsiveness */
+    width: 80%;
     max-width: 250px;
     background-color: rgb(0, 110, 255);
     color: white;
@@ -95,6 +102,16 @@ body, html {
 }
 
 /* Media queries for responsive design */
+@media (max-width: 1200px) {
+    #centered-text h4 {
+        font-size: 30px;
+    }
+
+    #centered-text h6 {
+        font-size: 45px;
+    }
+}
+
 @media (max-width: 768px) {
     #centered-text h4 {
         font-size: 25px;
@@ -102,5 +119,40 @@ body, html {
 
     #centered-text h6 {
         font-size: 40px;
+    }
+
+    #name-input,
+    #passcode-input,
+    #login-button {
+        width: 90%;
+    }
+}
+
+@media (max-width: 477px) {
+    #centered-text h4 {
+        font-size: 14px;
+    }
+
+    #centered-text h6 {
+        font-size: 30px;
+    }
+
+    #centered-textimage img {
+        width: 260px;
+        height: auto;
+    }
+
+    
+    #name-input,
+    #passcode-input,
+    #login-button {
+        width: 100%;
+    }
+    #imagescipla {
+        position: absolute;
+        top: 0;
+        right: 0;
+        margin: 2%;
+        max-width: 70px;
     }
 }
