--- a/style.css
+++ b/style.css
@@ -236,3 +236,47 @@ body, html {
     cursor: pointer;
   }
 
+  /* Responsive styles for smaller screens (e.g., tablets) */
+@media only screen and (max-width: 768px) {
+    #texttopright {
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+    }
+
+    #image-container {
+        margin-top: 20px;
+    }
+
+    #scrollButtonr,
+    #scrollButtonl {
+        bottom: 20px;
+    }
+}
+
+/* Responsive styles for even smaller screens (e.g., mobile phones) */
+@media only screen and (max-width: 480px) {
+    #texttopright {
+        top: 100px;
+        left: 33%;
+        transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
+    #image-container {
+        margin-top: 10px;
+    }
+
+    #scrollButtonr,
+    #scrollButtonl {
+        bottom: 10px;
+    }
+
+    .image img {
+        width: 135px;
+        height: 190px;
+        scroll-snap-align: start;
+        cursor: pointer;
+        transition: transform 0.3s ease-in-out;
+    }
+}
