--- a/style.css
+++ b/style.css
@@ -329,7 +329,7 @@ body, html {
     overflow-x: auto;
     white-space: nowrap;
     margin-top: 65px; /* Adjust margin as needed */
-    top: 45%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 100%;
@@ -338,6 +338,7 @@ body, html {
 
 .buttonid {
     margin-right: 10px;
+    padding: 10%;
 }
 
 
@@ -349,6 +350,7 @@ body, html {
     scroll-snap-align: start;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
+
   }
 
 
